welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:16: error: Unit does not take parameters
  gauche()()
          ^